test/expected/Syntax_error.txt
Parse error on line 1:
data.syntaxErr(
---------------^
Expecting ')', ',', 'VAR', got 'EOF'